refact: fixed remaining maintainability issues